--- a/wiki/encyclopedia/templates/encyclopedia/index.html
+++ b/wiki/encyclopedia/templates/encyclopedia/index.html
@@ -9,7 +9,7 @@
 
     <ul>
         {% for entry in entries %}
-            <li>{{ entry }}</li>
+            <a href="{% url 'entry' %}"><li>{{ entry }}</li></a>
         {% endfor %}
     </ul>
 
