add convert_md_to_html function

--- a/wiki/encyclopedia/templates/encyclopedia/newpage.html
+++ b/wiki/encyclopedia/templates/encyclopedia/newpage.html
@@ -6,9 +6,9 @@
 
 {% block body %}
     <div>
-        <label for="">Title</label><input type="text">
+        <label for="title">Title</label><input name="title" type="text">
     </div>
     <div>
-        <label for="">Page Content</label><input type="text">
+        <label for="page-content">Page Content</label><input id="page-content" type="text">
     </div>  
 {% endblock %}
