entry page finished

--- a/wiki/encyclopedia/templates/encyclopedia/error.html
+++ b/wiki/encyclopedia/templates/encyclopedia/error.html
@@ -1,9 +1,9 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    {{ title }}
+    404 Error
 {% endblock %}
 
 {% block body %}
-    {{ content|safe }}
+    <h1>{{ message }}</h1>
 {% endblock %}
