--- a/wiki/encyclopedia/templates/encyclopedia/index.html
+++ b/wiki/encyclopedia/templates/encyclopedia/index.html
@@ -9,7 +9,7 @@
 
     <ul>
         {% for entry in entries %}
-            <a href="{% url 'entry' %}"><li>{{ entry }}</li></a>
+            <li><a href="{% url 'entry' title=entry %}">{{ entry }}</a></li>
         {% endfor %}
     </ul>
 
