--- a/wiki/encyclopedia/templates/encyclopedia/editpage.html
+++ b/wiki/encyclopedia/templates/encyclopedia/editpage.html
@@ -8,8 +8,11 @@
 <h1>Create a New Page</h1>
 <form action="{% url 'newpage' %}" method="POST">
     {% csrf_token %}
-    {{ EditPageForm }}
-    <input type="submit" name="" id="" value="save">
+    <label for="title">Title</label>
+    <input type="text" name="title" value="{{ title }}" id="">
+    <label for="content">Markdown content</label>
+    <input type="text" name="content" value="{{ content }}" id="">
+    <input type="submit" name="" id="" value="Edit">
 </form>
 
 {% endblock %}
