--- a/wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -7,6 +7,7 @@
 {% block body %}
     {{ content|safe }}
     <form action="{% url 'editpage' %}">
+        {% csrf_token %}
         <input type="hidden" name="entry_title" value="{{ title }}">
         <input type="submit" value="Edit">
     </form>
