--- a/wiki/encyclopedia/templates/encyclopedia/editpage.html
+++ b/wiki/encyclopedia/templates/encyclopedia/editpage.html
@@ -9,10 +9,13 @@
 <form action="{% url 'save_edit' %}" method="POST">
     {% csrf_token %}
     <label for="title">Title</label>
-    <input type="text" name="title" value="{{ title }}" id="">
+    <input type="text" name="title" value="{{ title }}" >
+    <br>
     <label for="content">Markdown content</label>
-    <textarea name="content" id="">{{ content }}</textarea>
-    <input type="submit" name="" id="" value="Edit">
+    <br>
+    <textarea name="content" >{{ content }}</textarea>
+    <br>
+    <input class="btn btn-success" type="submit" value="save">
 </form>
 
 {% endblock %}
