add commerce app file

--- a/wiki/encyclopedia/templates/encyclopedia/newpage.html
+++ b/wiki/encyclopedia/templates/encyclopedia/newpage.html
@@ -9,7 +9,7 @@
 <form action="{% url 'newpage' %}" method="POST">
     {% csrf_token %}
     {{ newpageform }}
-    <input class="btn btn-success" type="submit" name="" id="" value="save">
+    <input class="btn btn-outline-success" type="submit" name="" id="" value="save">
 </form>
 
 {% endblock %}
