--- a/wiki/encyclopedia/templates/encyclopedia/editpage.html
+++ b/wiki/encyclopedia/templates/encyclopedia/editpage.html
@@ -8,14 +8,14 @@
 <h1>Create a New Page</h1>
 <form action="{% url 'save_edit' %}" method="POST">
     {% csrf_token %}
-    <label for="title">Title</label>
+    <label for="title">Title:</label>
     <input type="text" name="title" value="{{ title }}" >
     <br>
-    <label for="content">Markdown content</label>
+    <label for="content">Markdown content:</label>
     <br>
     <textarea name="content" >{{ content }}</textarea>
     <br>
-    <input class="btn btn-success" type="submit" value="save">
+    <input class="btn btn-outline-success" type="submit" value="save edit">
 </form>
 
 {% endblock %}
