--- a/commerce/auctions/templates/auctions/new_listing.html
+++ b/commerce/auctions/templates/auctions/new_listing.html
@@ -1,9 +1,9 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <form action="{% url 'new_listing' %}" method="post">
+    <form action="{% url 'new_listing' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ listing_form }}
+        {{ listing_form.as_p }}
         <input type="submit" value="create">
     </form>
 {% endblock %}
