--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -1,11 +1,11 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <div class="item-wrapper">
+    <div class="listing-container">
         <div class="img-wrapper">
             <img src="{{ listing.image.url }}" alt="">
         </div>
-        <div class="item-details-page">
+        <div class="listing-details-page">
             <div>
                 <strong>{{ listing.title }}</strong>
                 <br>
