--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -2,25 +2,24 @@
 
 {% block body %}
     <h2>Active Listings</h2>
-    <br>
     <ul class="item-list">
         {% for listing in active_listing %}
-        <div class="item-wrapper">
             <li>
-                <div class="img-wrapper">
-                <a href="{% url 'listing-page' listing.id %}"><img src="{{ listing.image.url }}" alt=""></a>
-                </div>
-                <div class="item-details">
-                    <a href="{% url 'listing-page' listing.id %}">{{ listing.title }}</a>
-                    <div>
-                        ${{ listing.starting_bid }}
+                <div class="list-item">
+                    <div class="img-wrapper">
+                    <a href="{% url 'listing-page' listing.id %}"><img src="{{ listing.image.url }}" alt=""></a>
                     </div>
-                    <div>
-                        {{ listing.description }}
+                    <div class="item-details">
+                        <a href="{% url 'listing-page' listing.id %}">{{ listing.title }}</a>
+                        <div>
+                            ${{ listing.starting_bid }}
+                        </div>
+                        <div>
+                            {{ listing.description }}
+                        </div>
                     </div>
                 </div>
             </li>
-        </div>
         {% endfor %}
     </ul>
 {% endblock %}
