--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -25,7 +25,8 @@
                     <a class="nav-link" href="{% url 'new_listing' %}">Create listing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Watchlist</a>
+                    
+                    <a class="nav-link" href="{% url 'watchlist' %}">Watchlist</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
