--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -24,6 +24,13 @@ body {
     background-color:  #FCFAFA;
 }
 
+.img-wrapper > img {
+    object-fit: cover;
+    width: 100%;
+    height: 15.625em;
+    padding: .31em;
+}
+
 .title-link {
     color: #3A3A3A;
     font-style: normal;
@@ -59,7 +66,7 @@ span {
 
 .listing-img > img {
     padding: .31em;
-    min-width: 100%;
+    max-width: 100%;
 }
 
 /* Listing Details */
