--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -21,6 +21,7 @@ body {
     width: 14.62em;
     height: 14.62em;
     margin-bottom: 1.5em;
+    border-radius: .65em;
     background-color:  #FCFAFA;
 }
 
@@ -29,6 +30,8 @@ body {
     width: 100%;
     height: 15.625em;
     padding: .31em;
+    border-radius: .65em;
+
 }
 
 .title-link {
@@ -163,6 +166,10 @@ h4 {
 .btn-bid { 
     background: #4A9CFD;
     color: #fff;
+    padding: 1em 4.5em;
+    border: none;
+    border-radius: 6.25em;
+    margin-bottom: .81em;
 }
 
 .btn-watchlist {
