--- a/commerce/auctions/templates/auctions/bid.html
+++ b/commerce/auctions/templates/auctions/bid.html
@@ -1,20 +1,15 @@
 <!-- Modal -->
-<div class="modal fade" id="BidModal" tabindex="-1" aria-labelledby="BidModalLabel" aria-hidden="true">
+<!-- Vertically centered modal -->
+<div class="modal fade" id="bidModal" tabindex="-1" aria-labelledby="bidModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="BIdModalLabel">Make a bid</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form action="{% url 'make-bid' %}">
-                <div class="modal-body">
-                    <input type="number" name="bidding" placeholder="Enter amount you want to bid">
+        <div class="modal-content mon-model">
+            <button type="button" class="close-btn" data-bs-dismiss="modal" aria-label="Close">x</button>
+            <h5 class="modal-title" id="bidModalLabel">Please Enter Your Bid</h5>
+            <form action="{% url 'make-bid' listing.id %}">
+                <div class="input-container">
+                    <input type="number" step=0.01 placeholder="Enter the amount you want to bid">
                 </div>
-            
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
+                <button type="submit" class="btn btn-confirm">Confirm</button>
             </form>
         </div>
     </div>
