--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -43,10 +43,11 @@
         <hr>
         {% block body %}
         {% endblock %}
-        <script src="{% static 'assets/js/bootstrap.js' %}"></script>
-        <script src="{% static 'assets/js/jquery.js' %}"></script>
-        <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
-        <!-- You can alternatively load the minified version -->
-        <script src="{% static 'js/jquery.bootstrap.modal.forms.min.js' %}"></script>
+
+        <!-- ======= JAVASCRIPT SECTION ======-->
+        <!-- Bootsrap5 JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+
+        <!-- Jquery -->
     </body>
 </html>
