--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -2,14 +2,17 @@
 {% load static %}
 
 {% block body %}
-    <h2>{{ request.user.email }}</h2>
 
-    <button name="mailbox" class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
-    <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
-    <button name="mailbox" class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
-    <button name="mailbox" class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
-    <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
-    <hr>
+    
+    <div>
+        <h2>{{ request.user.email }}</h2>
+
+        <button name="mailbox" class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
+        <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
+        <button name="mailbox" class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
+        <button name="mailbox" class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
+        <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>    
+    </div>
 
     <div id="emails-view">
     </div>
